# student-enrollment-app-cicd

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
ansible/: deploy.yml
student_enrollment_app/: database.py  main.py  metrics.py
templates/: index.html
tests/: test_app.py
